Refactor backend architecture with workers and migrations

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,13 @@
+alembic==1.13.1
+celery==5.3.6
+cryptography==42.0.5
 fastapi==0.104.1
-uvicorn[standard]==0.24.0
-httpx==0.25.1
 google-generativeai==0.3.2
+httpx==0.25.1
+psycopg2-binary==2.9.9
 pydantic==2.5.0
+redis==5.0.1
+sqlalchemy==2.0.23
+uvicorn[standard]==0.24.0
+
+ruff==0.3.0
