--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 # Core URLs
-PUBLIC_BASE_URL=http://localhost:8000
-ALLOWED_ORIGINS=http://localhost:3000,http://127.0.0.1:3000
+PUBLIC_BASE_URL=http://127.0.0.1:8000
+ALLOWED_ORIGINS=http://127.0.0.1:3000
 
 # Database & Cache
 DATABASE_URL=postgresql+psycopg2://postgres:postgres@postgres:5432/vibe
@@ -21,4 +21,4 @@ TARGET_ACCOUNTS=8
 FLOOR_TOTAL_PLAYLISTS=40
 
 # Frontend
-REACT_APP_API_BASE=http://localhost:8000
+REACT_APP_API_BASE=http://127.0.0.1:8000
