--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -70,7 +70,7 @@ services:
       - /app/node_modules
     environment:
       - CHOKIDAR_USEPOLLING=true
-      - REACT_APP_API_BASE=${PUBLIC_BASE_URL:-http://localhost:8000}
+      - REACT_APP_API_BASE=${PUBLIC_BASE_URL:-http://127.0.0.1:8000}
     depends_on:
       - api
 
